// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`Sparkline upward trend with auto color routes to win: upward 1`] = `
{
  "children": [
    {
      "children": [],
      "props": {
        "fill": "none",
        "points": "0.00,20.00 20.00,16.43 40.00,12.86 60.00,0.00",
        "stroke": "#5C8C1E",
        "strokeLinecap": "round",
        "strokeLinejoin": "round",
        "strokeWidth": 2,
      },
      "type": "Polyline",
    },
  ],
  "props": {
    "height": 20,
    "width": 60,
  },
  "type": "Svg",
}
`;

exports[`Sparkline downward trend with auto color routes to loss: downward 1`] = `
{
  "children": [
    {
      "children": [],
      "props": {
        "fill": "none",
        "points": "0.00,0.00 20.00,5.12 40.00,13.12 60.00,20.00",
        "stroke": "#E0463C",
        "strokeLinecap": "round",
        "strokeLinejoin": "round",
        "strokeWidth": 2,
      },
      "type": "Polyline",
    },
  ],
  "props": {
    "height": 20,
    "width": 60,
  },
  "type": "Svg",
}
`;

exports[`Sparkline renders with explicit color: explicit-color 1`] = `
{
  "children": [
    {
      "children": [],
      "props": {
        "fill": "none",
        "points": "0.00,20.00 30.00,0.00 60.00,12.00",
        "stroke": "#8FD43B",
        "strokeLinecap": "round",
        "strokeLinejoin": "round",
        "strokeWidth": 2,
      },
      "type": "Polyline",
    },
  ],
  "props": {
    "height": 20,
    "width": 60,
  },
  "type": "Svg",
}
`;

exports[`Sparkline handles single point gracefully — no polyline, just an empty Svg: single-point 1`] = `
{
  "children": [],
  "props": {
    "height": 20,
    "width": 60,
  },
  "type": "Svg",
}
`;

exports[`PlayerChip with name + elo + sub renders all three text leaves: with-sub 1`] = `
{
  "children": [
    {
      "children": [],
      "props": {
        "name": "Aleyna Kaya",
        "size": 32,
        "uri": undefined,
      },
      "type": "Avatar",
    },
    {
      "children": [
        {
          "children": [
            "Aleyna Kaya",
          ],
          "props": {
            "className": "font-sans font-bold",
            "numberOfLines": 1,
            "style": {
              "color": "#161618",
              "fontSize": 13.5,
              "lineHeight": 13.5,
            },
          },
          "type": "Text",
        },
        {
          "children": [
            "Amatör · 2. sınıf",
          ],
          "props": {
            "className": "font-sans font-semibold",
            "numberOfLines": 1,
            "style": {
              "color": "#A2A2AA",
              "fontSize": 11,
              "marginTop": 3,
            },
          },
          "type": "Text",
        },
      ],
      "props": {
        "style": {
          "flexShrink": 1,
          "minWidth": 0,
        },
      },
      "type": "View",
    },
    {
      "children": [
        1487,
      ],
      "props": {
        "className": "font-num font-extrabold",
        "style": {
          "color": "#161618",
          "fontSize": 14,
          "marginLeft": 4,
        },
      },
      "type": "Text",
    },
  ],
  "props": {
    "className": "flex-row items-center rounded-pill border-base border-border-strong bg-surface",
    "style": {
      "gap": 10,
      "paddingLeft": 6,
      "paddingRight": 14,
      "paddingVertical": 6,
    },
  },
  "type": "View",
}
`;

exports[`PlayerChip without sub omits the secondary text node: no-sub 1`] = `
{
  "children": [
    {
      "children": [],
      "props": {
        "name": "Kaan Demir",
        "size": 32,
        "uri": undefined,
      },
      "type": "Avatar",
    },
    {
      "children": [
        {
          "children": [
            "Kaan Demir",
          ],
          "props": {
            "className": "font-sans font-bold",
            "numberOfLines": 1,
            "style": {
              "color": "#161618",
              "fontSize": 13.5,
              "lineHeight": 13.5,
            },
          },
          "type": "Text",
        },
      ],
      "props": {
        "style": {
          "flexShrink": 1,
          "minWidth": 0,
        },
      },
      "type": "View",
    },
    {
      "children": [
        1924,
      ],
      "props": {
        "className": "font-num font-extrabold",
        "style": {
          "color": "#161618",
          "fontSize": 14,
          "marginLeft": 4,
        },
      },
      "type": "Text",
    },
  ],
  "props": {
    "className": "flex-row items-center rounded-pill border-base border-border-strong bg-surface",
    "style": {
      "gap": 10,
      "paddingLeft": 6,
      "paddingRight": 14,
      "paddingVertical": 6,
    },
  },
  "type": "View",
}
`;

exports[`MatchCard planned variant — blue header + secondary CTA: planned 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "props": {
                "style": {
                  "backgroundColor": "#2270BC",
                  "borderRadius": 4,
                  "height": 7,
                  "width": 7,
                },
              },
              "type": "View",
            },
            {
              "children": [
                "Planlı",
              ],
              "props": {
                "className": "font-sans font-extrabold",
                "style": {
                  "color": "#2270BC",
                  "fontSize": 11.5,
                },
              },
              "type": "Text",
            },
          ],
          "props": {
            "className": "flex-row items-center",
            "style": {
              "gap": 6,
            },
          },
          "type": "View",
        },
        {
          "children": [],
          "props": {
            "fmtKey": "klasik",
            "size": 11,
          },
          "type": "FormatChip",
        },
      ],
      "props": {
        "className": "flex-row items-center justify-between px-4 py-2.5 bg-blue-soft",
        "style": {
          "borderBottomWidth": 1.5,
          "borderColor": "#1A1A1A",
        },
      },
      "type": "View",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "props": {
                "name": "Sen",
                "size": 40,
              },
              "type": "Avatar",
            },
            {
              "children": [
                {
                  "children": [
                    "Sen",
                    " ",
                    {
                      "children": [
                        "vs",
                      ],
                      "props": {
                        "style": {
                          "color": "#A2A2AA",
                          "fontWeight": "600",
                        },
                      },
                      "type": "Text",
                    },
                    " ",
                    "Aleyna Kaya",
                  ],
                  "props": {
                    "className": "font-sans font-bold",
                    "numberOfLines": 1,
                    "style": {
                      "color": "#161618",
                      "fontSize": 14,
                    },
                  },
                  "type": "Text",
                },
                {
                  "children": [
                    "Yarın 10:00 · Hisar",
                  ],
                  "props": {
                    "className": "font-sans font-semibold",
                    "numberOfLines": 1,
                    "style": {
                      "color": "#A2A2AA",
                      "fontSize": 12,
                      "marginTop": 2,
                    },
                  },
                  "type": "Text",
                },
              ],
              "props": {
                "style": {
                  "flex": 1,
                  "minWidth": 0,
                },
              },
              "type": "View",
            },
            {
              "children": [],
              "props": {
                "name": "Aleyna Kaya",
                "size": 40,
              },
              "type": "Avatar",
            },
          ],
          "props": {
            "className": "flex-row items-center",
            "style": {
              "gap": 11,
            },
          },
          "type": "View",
        },
        {
          "children": [
            {
              "children": [
                "Detay",
              ],
              "props": {
                "full": true,
                "onPress": [Function],
                "size": "sm",
                "variant": "secondary",
              },
              "type": "Button",
            },
          ],
          "props": {
            "style": {
              "marginTop": 13,
            },
          },
          "type": "View",
        },
      ],
      "props": {
        "className": "p-4",
      },
      "type": "View",
    },
  ],
  "props": {
    "className": "rounded-lg overflow-hidden border-base border-border-strong bg-surface",
  },
  "type": "View",
}
`;

exports[`MatchCard pending variant — warn header + primary CTA: pending 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "props": {
                "style": {
                  "backgroundColor": "#E0992B",
                  "borderRadius": 4,
                  "height": 7,
                  "width": 7,
                },
              },
              "type": "View",
            },
            {
              "children": [
                "Skor bekliyor",
              ],
              "props": {
                "className": "font-sans font-extrabold",
                "style": {
                  "color": "#E0992B",
                  "fontSize": 11.5,
                },
              },
              "type": "Text",
            },
          ],
          "props": {
            "className": "flex-row items-center",
            "style": {
              "gap": 6,
            },
          },
          "type": "View",
        },
        {
          "children": [],
          "props": {
            "fmtKey": "klasik",
            "size": 11,
          },
          "type": "FormatChip",
        },
      ],
      "props": {
        "className": "flex-row items-center justify-between px-4 py-2.5 bg-warn-soft",
        "style": {
          "borderBottomWidth": 1.5,
          "borderColor": "#1A1A1A",
        },
      },
      "type": "View",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "props": {
                "name": "Sen",
                "size": 40,
              },
              "type": "Avatar",
            },
            {
              "children": [
                {
                  "children": [
                    "Sen",
                    " ",
                    {
                      "children": [
                        "vs",
                      ],
                      "props": {
                        "style": {
                          "color": "#A2A2AA",
                          "fontWeight": "600",
                        },
                      },
                      "type": "Text",
                    },
                    " ",
                    "Berk Aydın",
                  ],
                  "props": {
                    "className": "font-sans font-bold",
                    "numberOfLines": 1,
                    "style": {
                      "color": "#161618",
                      "fontSize": 14,
                    },
                  },
                  "type": "Text",
                },
                {
                  "children": [
                    "Bugün 18:30 · Kort 1",
                  ],
                  "props": {
                    "className": "font-sans font-semibold",
                    "numberOfLines": 1,
                    "style": {
                      "color": "#A2A2AA",
                      "fontSize": 12,
                      "marginTop": 2,
                    },
                  },
                  "type": "Text",
                },
              ],
              "props": {
                "style": {
                  "flex": 1,
                  "minWidth": 0,
                },
              },
              "type": "View",
            },
            {
              "children": [],
              "props": {
                "name": "Berk Aydın",
                "size": 40,
              },
              "type": "Avatar",
            },
          ],
          "props": {
            "className": "flex-row items-center",
            "style": {
              "gap": 11,
            },
          },
          "type": "View",
        },
        {
          "children": [
            {
              "children": [
                "Skoru gir",
              ],
              "props": {
                "full": true,
                "onPress": [Function],
                "size": "sm",
                "variant": "primary",
              },
              "type": "Button",
            },
          ],
          "props": {
            "style": {
              "marginTop": 13,
            },
          },
          "type": "View",
        },
      ],
      "props": {
        "className": "p-4",
      },
      "type": "View",
    },
  ],
  "props": {
    "className": "rounded-lg overflow-hidden border-base border-border-strong bg-surface",
  },
  "type": "View",
}
`;

exports[`MatchCard done variant with win — lime header + scoreline + EloChip: done-win 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "props": {
                "style": {
                  "backgroundColor": "#5C8C1E",
                  "borderRadius": 4,
                  "height": 7,
                  "width": 7,
                },
              },
              "type": "View",
            },
            {
              "children": [
                "Tamamlandı",
              ],
              "props": {
                "className": "font-sans font-extrabold",
                "style": {
                  "color": "#5C8C1E",
                  "fontSize": 11.5,
                },
              },
              "type": "Text",
            },
          ],
          "props": {
            "className": "flex-row items-center",
            "style": {
              "gap": 6,
            },
          },
          "type": "View",
        },
        {
          "children": [],
          "props": {
            "fmtKey": "klasik",
            "size": 11,
          },
          "type": "FormatChip",
        },
      ],
      "props": {
        "className": "flex-row items-center justify-between px-4 py-2.5 bg-lime-soft",
        "style": {
          "borderBottomWidth": 1.5,
          "borderColor": "#1A1A1A",
        },
      },
      "type": "View",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "props": {
                "name": "Sen",
                "size": 40,
              },
              "type": "Avatar",
            },
            {
              "children": [
                {
                  "children": [
                    "Sen",
                    " ",
                    {
                      "children": [
                        "vs",
                      ],
                      "props": {
                        "style": {
                          "color": "#A2A2AA",
                          "fontWeight": "600",
                        },
                      },
                      "type": "Text",
                    },
                    " ",
                    "Onur Çelik",
                  ],
                  "props": {
                    "className": "font-sans font-bold",
                    "numberOfLines": 1,
                    "style": {
                      "color": "#161618",
                      "fontSize": 14,
                    },
                  },
                  "type": "Text",
                },
                {
                  "children": [
                    "Kandilli Tenis Kortu",
                  ],
                  "props": {
                    "className": "font-sans font-semibold",
                    "numberOfLines": 1,
                    "style": {
                      "color": "#A2A2AA",
                      "fontSize": 12,
                      "marginTop": 2,
                    },
                  },
                  "type": "Text",
                },
              ],
              "props": {
                "style": {
                  "flex": 1,
                  "minWidth": 0,
                },
              },
              "type": "View",
            },
            {
              "children": [],
              "props": {
                "name": "Onur Çelik",
                "size": 40,
              },
              "type": "Avatar",
            },
          ],
          "props": {
            "className": "flex-row items-center",
            "style": {
              "gap": 11,
            },
          },
          "type": "View",
        },
        {
          "children": [
            {
              "children": [
                "Kazandın",
              ],
              "props": {
                "className": "font-sans font-extrabold",
                "style": {
                  "color": "#5C8C1E",
                  "fontSize": 13,
                },
              },
              "type": "Text",
            },
            {
              "children": [
                "4-2",
              ],
              "props": {
                "className": "font-num font-extrabold",
                "style": {
                  "color": "#161618",
                  "fontSize": 22,
                },
              },
              "type": "Text",
            },
            {
              "children": [],
              "props": {
                "delta": 22,
                "elo": 1612,
              },
              "type": "EloChip",
            },
          ],
          "props": {
            "className": "flex-row items-center justify-between",
            "style": {
              "borderColor": "#E8E8E4",
              "borderTopWidth": 1,
              "marginTop": 13,
              "paddingTop": 13,
            },
          },
          "type": "View",
        },
      ],
      "props": {
        "className": "p-4",
      },
      "type": "View",
    },
  ],
  "props": {
    "className": "rounded-lg overflow-hidden border-base border-border-strong bg-surface",
  },
  "type": "View",
}
`;
